# phantom_old_3

./: .gitignore  404.html  Cargo.toml  README.md  adding-dependencies.html  appendix-further-reading.html  appendix-keywords.html  appendix-vulkan-configurator.html  appendix.html  book.toml  clippy.toml  creating-a-gui.html  creating-an-application.html  creating-the-renderer.html  creating-the-rendering-library.html  final-project-preview.html  game-states.html  gamepads.html  getting-started.html  index.html  introduction.html  justfile  print.html  project-setup.html  render-trait.html  rendering.html  rustfmt.toml  searchindex.js  searchindex.json  the-logging-backend.html  tracking-input.html  using-the-renderer.html  vulkan-backend.html  vulkan-context.html  vulkan-instance.html  vulkan-logical-device.html  vulkan-physical-device.html  vulkan-surface.html
.github/workflows/: docs.yml  main.yml  pull_request_template.md
apps/editor/: Cargo.toml
apps/editor/src/: commands.rs  editor.rs  main.rs
apps/game/: Cargo.toml
apps/game/src/: game.rs  main.rs
apps/viewer/: Cargo.toml
apps/viewer/src/: main.rs  viewer.rs
assets/shaders/cube/: cube.vert.spv
assets/shaders/environment/: genbrdflut.frag.spv
assets/shaders/skybox/: skybox.frag.spv  skybox.vert.spv
book/: book.toml
book/src/: SUMMARY.md  adding-dependencies.md  appendix-further-reading.md  creating-a-gui.md  creating-an-application.md  creating-the-renderer.md  final-project-preview.md  game-states.md  gamepad-support.md  gamepads.md  getting-started.md  introduction.md  project-setup.md  render-interface.md  rendering.md  the-logging-backend.md  tracking-input.md  using-the-renderer.md
crates/phantom_app/: Cargo.toml
crates/phantom_app/src/: app.rs  camera.rs  lib.rs  resources.rs  state.rs
crates/phantom_app/src/resources/: input.rs  system.rs
crates/phantom_audio/: Cargo.toml
crates/phantom_audio/src/: audio.rs
crates/phantom_config/: Cargo.toml
crates/phantom_config/src/: config.rs
crates/phantom_dependencies/: Cargo.toml
crates/phantom_dependencies/src/: lib.rs
crates/phantom_gui/: Cargo.toml
crates/phantom_gui/src/: gizmo.rs  gui.rs  lib.rs
crates/phantom_render/: Cargo.toml
crates/phantom_render/src/: backend.rs  device.rs  lib.rs  render.rs  renderer.rs  vulkan.rs  world.rs
crates/phantom_render/src/backend/: opengl.rs  vulkan.rs  wgpu.rs
crates/phantom_render/src/backend/opengl/: buffer.rs  context.rs  graphics.rs  grid.rs  renderer.rs  shader.rs  texture.rs  world.rs
crates/phantom_render/src/backend/opengl/world/: blinnphong.rs  pbr.rs  render.rs  unlit.rs
crates/phantom_render/src/backend/vulkan/: device.rs  renderer.rs  scene.rs
crates/phantom_render/src/backend/wgpu/: device.rs  gui.rs  renderer.rs  rendergraph.rs  texture.rs  world.rs
crates/phantom_render/src/backend/wgpu/world/: render.rs  uniform.rs
crates/phantom_render/src/device/: dummy.rs  vulkan.rs
crates/phantom_render/src/render/: gui.rs  renderer.rs  wgpu.rs  world.rs
crates/phantom_render/src/render/world/: render.rs  scene.rs  texture.rs  uniform.rs
crates/phantom_render/src/shaders/: shader.wgsl
crates/phantom_render/src/vulkan/: core.rs  device.rs
crates/phantom_render/src/vulkan/core/: context.rs  frame.rs  swapchain.rs
crates/phantom_render/src/vulkan/core/adapters/: command.rs  descriptor.rs  pipeline.rs  render.rs  sync.rs
crates/phantom_render/src/vulkan/core/context/: debug.rs  physical_device.rs
crates/phantom_render/src/vulkan/core/resources/: buffer.rs  image.rs  shader.rs
crates/phantom_render_traits/: Cargo.toml
crates/phantom_render_traits/src/: device.rs
crates/phantom_shader/: Cargo.toml
crates/phantom_vulkan/: .gitignore  Cargo.toml  build.rs
crates/phantom_vulkan/shaders/environment/: equirectangular_to_cubemap.frag.spv  filtercube.vert.spv  irradiancecube.frag.spv  prefilterenvmap.frag.spv
crates/phantom_vulkan/shaders/gui/: gui.vert.spv
crates/phantom_vulkan/shaders/postprocessing/: postprocess.frag.spv
crates/phantom_vulkan/shaders/world/: world.frag.spv  world.vert.spv
crates/phantom_vulkan/src/: device.rs  lib.rs
crates/phantom_vulkan/src/core/: context.rs  frame.rs  swapchain.rs
crates/phantom_vulkan/src/core/context/: debug.rs  instance.rs
crates/phantom_vulkan/src/core/resources/: buffer.rs  image.rs
crates/phantom_vulkan/src/pbr/: environment.rs  hdr.rs
crates/phantom_wgpu/: Cargo.toml
crates/phantom_wgpu/src/: device.rs  gui.rs  world.rs
crates/phantom_window/: Cargo.toml
crates/phantom_window/src/: lib.rs  window.rs
crates/phantom_world/: Cargo.toml
crates/phantom_world/src/: animation.rs  camera.rs  gltf.rs  lib.rs  physics.rs  registry.rs  scenegraph.rs  texture.rs  transform.rs  world.rs
src/: SUMMARY.md  amd-vulkan-memory-allocator.md  appendix-further-reading.md  appendix-keywords.md  appendix-vulkan-configurator.md  clearing-the-screen-with-vulkan.md  creating-a-render-module.md  creating-an-application.md  creating-the-rendering-library.md  final-project-preview.md  getting-started.md  introduction.md  lib.rs  project-setup.md  render-trait.md  the-logging-backend.md  using-the-renderer.md  vulkan-backend.md  vulkan-context.md  vulkan-instance.md  vulkan-instances.md  vulkan-logical-device.md  vulkan-logical-devices.md  vulkan-physical-device.md  vulkan-physical-devices.md  vulkan-render-backend.md  vulkan-surface.md
