[package]
name = "editor"
version = "0.1.0"
edition = "2021"
default-run = "editor"

[dependencies]
anyhow = "1.0.62"
egui = "0.19.0"
egui-gizmo = { git = "https://github.com/matthewjberger/egui-gizmo" }
legion = "0.4.0"
log = "0.4.17"
nalgebra-glm = { version = "0.17.0", features = ["serde-serialize", "convert-bytemuck"] }
petgraph = { version = "0.6.2", features = ["serde-1"] }
phantom = { path = "../.." }
rfd = "0.10.0"
winit = "0.27.2"