[package]
name = "phantom_app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.20.1"
egui-wgpu = { version = "0.20.0", features = ["winit"] }
gilrs = "0.10.1"
image = "0.24.5"
legion = "0.4.0"
log = "0.4.17"
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize", "convert-bytemuck"] }
phantom_config = { path = "../phantom_config" }
phantom_gui = { path = "../phantom_gui" }
phantom_render = { path = "../phantom_render" }
phantom_world = { path = "../phantom_world" }
thiserror = "1.0.38"
winit = "0.28.1"
