[package]
name = "phantom_app"
version = "0.1.0"
edition = "2021"

[dependencies]
gilrs = "0.10.1"
image = "0.24.5"
log = "0.4.17"
phantom_config = { path = "../phantom_config" }
phantom_gui = { path = "../phantom_gui" }
phantom_render = { path = "../phantom_render" }
phantom_world = { path = "../phantom_world" }
thiserror = "1.0.38"
winit = "0.27.5"
