[package]
name = "phantom_dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
gilrs = "0.9.0"
image = "0.24.2"
log = "0.4.17"
nalgebra-glm = "0.17.0"
pollster = "0.2.5"
raw-window-handle = "0.4.3"
thiserror = "1.0.31"
wgpu = "0.13.1"
winit = "0.27.2"
