[package]
name = "phantom_dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
bincode = "1.3.3"
bmfont = { version = "0.3.3", features = ["serde"] }
bytemuck = { version = "1.12.1", features = ["derive"] }
egui = "0.19.0"
egui_glow = { version = "0.19.0", features = ["winit"] }
egui-wgpu = { version = "0.19.0", features = ["winit"] }
egui-winit = "0.19.0"
env_logger = "0.9.0"
gilrs = "0.9.0"
gl = "0.14.0"
glow = "0.11.2"
gltf = { version = "1.0.0", features = ["names", "KHR_lights_punctual", "KHR_materials_unlit"] }
glutin = "0.29.1"
image = "0.24.3"
lazy_static = "1.4.0"
legion = "0.4.0"
log = "0.4.17"
nalgebra = "0.31.1"
nalgebra-glm = { version = "0.17.0", features = ["serde-serialize", "convert-bytemuck"] }
petgraph = { version = "0.6.2", features = ["serde-1"] }
pollster = "0.2.5"
rapier3d = { version = "0.14.0", features = ["serde-serialize"] }
raw-window-handle = "0.4.3"
rfd = "0.10.0"
rodio = "0.15.0"
serde = "1.0.144"
thiserror = "1.0.32"
wgpu = "0.13.1"
winit = "0.27.2"
