[package]
name = "phantom_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.19.0"
egui-gizmo = { git = "https://github.com/matthewjberger/egui-gizmo" }
egui-wgpu = { version = "0.19.0", features = ["winit"] }
egui-winit = "0.19.0"
nalgebra-glm = { version = "0.17.0", features = ["serde-serialize", "convert-bytemuck"] }
winit = "0.27.2"