[package]
name = "phantom_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.20.1"
egui-gizmo = "0.9.0"
egui-wgpu = { version = "0.20.0", features = ["winit"] }
egui-winit = "0.20.1"
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize", "convert-bytemuck"] }
winit = "0.28.1"
