[package]
name = "phantom_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.21.0"
egui-gizmo = { git = "https://github.com/matthewjberger/egui-gizmo", branch = "egui-21" }
egui-winit = "0.21.0"
phantom_world = { path = "../phantom_world" }
phantom_window = { path = "../phantom_window" }
