[package]
name = "phantom_render"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
bytemuck = { version = "1.13.0", features = ["derive"] }
egui = "0.20.1"
egui-wgpu = { version = "0.20.0", features = ["winit"] }
legion = "0.4.0"
log = "0.4.17"
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize", "convert-bytemuck"] }
phantom_config = { path = "../phantom_config" }
phantom_gui = { path = "../phantom_gui" }
phantom_vulkan = { path = "../phantom_vulkan" }
phantom_world = { path = "../phantom_world" }
pollster = "0.2.5"
raw-window-handle = "0.5.0"
thiserror = "1.0.38"
wgpu = "0.14.2"
