[package]
name = "phantom_render"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
ash = "0.37.2"
ash-window = "0.12.0"
derive_builder = "0.12.0"
gpu-allocator = "0.22.0"
log = "0.4.17"
phantom_config = { path = "../phantom_config" }
phantom_gui = { path = "../phantom_gui" }
phantom_window = { path = "../phantom_window" }
phantom_world = { path = "../phantom_world" }
raw-window-handle = "0.5.0"
thiserror = "1.0.38"
